--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.4",
     "html-webpack-plugin": "^5.3.1",
+    "style-loader": "^2.0.0",
     "typescript": "^4.2.4",
     "webpack": "^5.35.0",
     "webpack-cli": "^4.6.0",
